--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
     "pg": "4.4.1",
+    "pg-promise": "^5.5.0",
     "serve-favicon": "~2.3.0"
   }
 }
