--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express": "~4.13.1",
     "jade": "~1.11.0",
     "morgan": "~1.6.1",
+    "numeral": "^2.0.4",
     "pg": "4.4.1",
     "pg-promise": "^5.5.0",
     "serve-favicon": "~2.3.0"
